--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@
 # Build directory
 build/
 bin/
+obj/
 
 # Compilation database
 compile_commands.json
@@ -72,5 +73,5 @@ Thumbs.db
 # Cache
 .cache
 
-# Custom binary
+# Binaries
 main
